--- a/src/css/style.css
+++ b/src/css/style.css
@@ -191,10 +191,11 @@ p + p {
 
 .about-image {
   width: 300px;
+  height: 444px;
   margin-left: 20px;
   margin-bottom: 20px;
   float: right;
-  content: url(../img/myself.jpg);
+  background-image: url("/img/myself.jpg");
   box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
 }
 
